[gd_scene load_steps=3 format=3 uid="uid://ca13mevyyk4eo"]

[ext_resource type="Script" path="res://ui/level_menus/failure_menu.gd" id="1_4vgl5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_egkdc"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="FailureMenu" type="Panel"]
process_mode = 2
custom_minimum_size = Vector2(500, 256)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4vgl5")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "Failure!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="ButtonContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_egkdc")

[node name="Menu" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 48
text = "Menu"

[node name="Reset" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 48
text = "Reset"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/Reset" to="." method="_on_reset_pressed"]
